Make testing dockerfile use same image as the deployment dockerfile so environments are consistent.

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -1,9 +1,7 @@
-FROM ubuntu:xenial
+FROM tiangolo/uwsgi-nginx-flask:flask
 
 MAINTAINER Nick Lozon <nick.lozon@cleverfew.co>
 
-RUN apt-get update
-RUN apt-get install -y python python-pip
 RUN pip install nose2 flask
 
 COPY . /app
