--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
 # Use docker-compose for development
-version: '2'
-services:
-  web:
-    build: .
-    ports:
-     - "5000:80"
-    volumes:
-     - ./app:/app
-  redis:
-    image: "redis:alpine"
+web:
+  image: example/my_web_app:latest
+  links:
+    - redis
+  environment:
+    DATABASE_URL: 'postgrest://production-db.example.com:12345'
+redis:
+  image: "redis:alpine"
