Dockerfile now install requirements.txt. Docker-compose updates for environment variables. DB connection setup. DB config file loaded from environment variable.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,12 +1,12 @@
 web:
   build: .
-  ports:
-    - "8080:80"
+  ports: 
+    - '8080:80'
   volumes:
     - ./app:/app
   environment:
     DEBUG: 'true'
-    DATABASE_URL: 'postgres://db:5432'
+    APP_ENV: 'local'
   links:
     - db
 db:
